common-applications/test-environment/infra-cve-manager/hk/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: infra-cve-manager
  name: infra-cve-manager
