common-applications/test-environment/infra-cve-manager/hk/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: icms-service
  namespace: infra-cve-manager
spec:
  ports:
  - name: http-port
    protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: icms
  type: ClusterIP
