common-applications/test-environment/infra-cve-manager/hk/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: icms-ingress
  namespace: infra-cve-manager
spec:
  tls:
    - hosts:
        - icms.test.osinfra.cn
      secretName: icms-tls
  rules:
    - host: icms.test.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: icms-service
              servicePort: 8080
            path: /
